Bug 65934 - [writer] Rotating gifs resulsts in a read error.
Summary: [writer] Rotating gifs resulsts in a read error.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-19 13:37 UTC by Jelle van der Waa
Modified: 2013-11-27 21:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file with a .gif file in it (1.83 MB, application/vnd.oasis.opendocument.text)
2013-06-24 13:32 UTC, Emir Sarı
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jelle van der Waa 2013-06-19 13:37:30 UTC
When I insert a gif image in writer, it's displayed correctly. But when I rotate the image it get a read error.
Comment 1 Emir Sarı 2013-06-19 14:17:37 UTC
Hmm, 

When I insert a .gif image into a blank Writer document and try to rotate it, image looks like it's been squeezed from both sides, and it plays distorted. 

Could you attach a sample document with the .gif you've mentioned?

OS X 10.7.5, latest master.
Comment 2 Emir Sarı 2013-06-19 14:19:18 UTC
PS, image does not rotate BTW. Just gets squeezed from sides.
Comment 3 Commit Notification 2013-06-22 12:03:59 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4449a227c86807af70abf4837d32fcd17181340d

fdo#65934 and fdo#64189 External export graphic filter name fix



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-06-22 17:06:19 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=46b09ee63e901a9c8fdc41fe16398a932be35340&h=libreoffice-4-1

fdo#65934 and fdo#64189 External export graphic filter name fix


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Emir Sarı 2013-06-24 05:26:27 UTC
I still cannot rotate .gifs.
Comment 6 Tomaz Vajngerl 2013-06-24 11:34:41 UTC
(In reply to comment #5)
> I still cannot rotate .gifs.

Always say which version of LO you used to test. 

The latest available LO 4.1 daily build and latest RC may not include this fix. I tested daily build of LO 4.2 [1] and it works.

[1] http://dev-builds.libreoffice.org/daily/master/Win-x86@6/2013-06-23_23.38.35/master~2013-06-23_23.38.35_LibreOfficeDev_4.2.0.0.alpha0_Win_x86.msi
Comment 7 Emir Sarı 2013-06-24 13:32:17 UTC
Created attachment 81339 [details]
Sample file with a .gif file in it
Comment 8 Emir Sarı 2013-06-24 13:33:05 UTC
I am using the latest daily master Version: 4.2.0.0.alpha0+ Build ID: c639c0931c3fed566df0a6fb3ec68d2c9884d2d4 -  24-Jun-2013 03:39, and it does not work. 

Sample file attached.
Comment 9 Tomaz Vajngerl 2013-06-24 14:00:08 UTC
Animated GIFs aren't currently supported for rotation. It is currently possible to perform a "left" rotation because of a bug but otherwise rotate for animated GIFs will be disabled.
Comment 10 Jean-Baptiste Faure 2013-11-27 21:13:20 UTC
Rotation of gif images works now.
Set status to FIXED dur to comment #3

Best regards. JBF