fdo#65934 and fdo#64189 External export graphic filter name fix

Change-Id: I798fac589abeac61115210cd4805e6b53a8767c6